--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   --sidebar-bg: hsla(0, 0%, 100%, 0.05);
   --alpha-bg: hsla(0, 0%, 100%, 0.1);
   --setting-icon-text: #d8d8d8;
+  --dark-alpha-50: hsla(0, 0%, 0%, 0.5);
 
   --img-logo: url(https://zmp3-static.zmdcdn.me/skins/zmp3-v6.1/images/backgrounds/logo-dark.svg);
 }
@@ -65,6 +66,10 @@ code {
   margin-right: 15px !important;
 }
 
+.mar-b-15 {
+  margin-bottom: 15px !important;
+}
+
 .item {
   display: flex;
   align-items: center;
@@ -96,7 +101,6 @@ code {
 .media {
   align-items: center;
   display: flex;
-  height: 40px;
   text-align: left;
   padding: 10px;
   border-radius: 5px;
