--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   width: 100%;
   min-width: 768px;
   height: 100vh;
-  background-color: var(--layout-background);
+  /* background-color: var(--layout-background); */
 }
 
 .main-page {
@@ -11,6 +11,10 @@
   flex-grow: 1;
   position: relative;
   width: calc(100% - 570px);
-  min-height: 100%;
+  height: 100%;
   z-index: 1;
+}
+
+.song-playing {
+  height: calc(100% - 90px);
 }
