--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --text-secondary: hsla(0, 0%, 100%, 0.5);
   --link-text-hover: #c662ef;
   --primary-bg: #432275;
+  --alpha-layout-bg: rgba(41, 21, 71, 0.8);
   --border-secondary: hsla(0, 0%, 100%, 0.05);
   --song-item-action: hsla(0, 0%, 100%, 0.5);
   --navigation-text: #dadada;
@@ -35,6 +36,14 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.cursor-disabled {
+  cursor: not-allowed !important;
+}
+
+.cursor-disabled:hover {
+  cursor: not-allowed !important;
 }
 
 .btn {
