--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   --setting-icon-text: #d8d8d8;
   --dark-alpha-50: hsla(0, 0%, 0%, 0.5);
 
-  --img-logo: url(https://zmp3-static.zmdcdn.me/skins/zmp3-v6.1/images/backgrounds/logo-dark.svg);
+  --img-logo: url(https://icons.iconarchive.com/icons/papirus-team/papirus-apps/128/multimedia-audio-player-icon.png);
 }
 
 body {
