--- a/src/component/Navbar/Navbar.css
+++ b/src/component/Navbar/Navbar.css
@@ -35,11 +35,24 @@
   padding: 0;
 }
 
+.btn-logo > a {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  color: var(--text-primary);
+}
+
 .logo {
-  width: 120px;
+  width: 40px;
   height: 40px;
   display: inline-block;
   background: var(--img-logo) 50% / contain no-repeat;
+  padding: 0 10px;
+}
+
+.logo-title {
+  font-size: 20px;
+  font-weight: 500;
 }
 
 .navbar-main {
@@ -55,7 +68,7 @@
 
 .navbar-main .navbar-menu .nav-item {
   font-weight: 700;
-  border-left: 3px solid transparent;
+  /* border-left: 3px solid transparent; */
 }
 
 .navbar-main .navbar-menu .nav-item .nav-link {
@@ -168,4 +181,41 @@
 .btn-add-play-list:hover {
   color: var(--text-primary);
   cursor: pointer;
+}
+
+@media screen and (max-width: 1200px) {
+  .sidebar {
+    width: 70px;
+    transition: width 0.3s ease-out;
+  }
+
+  .nav-item span {
+    display: none;
+  }
+
+  .navbar-main .navbar-menu .nav-item .nav-link {
+    justify-content: center;
+    padding: 10px 0;
+  }
+
+  .login-container,
+  .vip-banner,
+  .logo-title {
+    display: none;
+  }
+
+  .sidebar .navbar-menu .nav-item .nav-icon {
+    margin: 0;
+  }
+
+  .sidebar .navbar .navbar-logo {
+    width: 70px;
+    justify-content: center;
+    padding: 0;
+  }
+
+  .logo {
+    width: 40px;
+    background-image: var(--img-logo);
+  }
 }
