--- a/src/component/ZingChart/ZingChart.css
+++ b/src/component/ZingChart/ZingChart.css
@@ -45,9 +45,7 @@
 
 .chart-wrapper {
   position: relative;
-  padding-bottom: 30px;
-  /* margin-top: -70px; */
-  padding-top: 110px;
+  padding: 30px 0;
 }
 
 .chart-list-container {
@@ -103,6 +101,10 @@
 }
 
 .show-list .btn-show-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 120px;
   font-size: 14px;
   color: var(--text-primary);
   border: 1px solid var(--text-primary);
