--- a/src/component/NowPlaying/NowPlaying.css
+++ b/src/component/NowPlaying/NowPlaying.css
@@ -21,7 +21,6 @@
 
 .player-control-container {
   height: 90px;
-  min-width: 768px;
   padding: 0 20px;
   background-color: rgba(0, 0, 0, 0.2);
   border-top: 1px solid var(--alpha-bg);
@@ -44,6 +43,14 @@
 
 .song-info .media-content {
   max-width: max-content;
+}
+
+.song-title,
+.song-artists {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 80%;
 }
 
 .media .media-left .thumbnail-wrapper {
@@ -206,5 +213,58 @@
   .item.list-playing,
   .div {
     display: flex;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .player-control {
+    bottom: 70px;
+  }
+
+  .process {
+    position: fixed;
+    bottom: 140px;
+    display: block;
+    left: -8px;
+  }
+
+  .time,
+  .player-control-right,
+  .mobile-hide,
+  .btn-control:first-child,
+  .btn-control:last-child {
+    display: none;
+  }
+
+  .control-wrapper {
+    justify-content: flex-end;
+    flex-grow: unset;
+  }
+
+  .player-control-container {
+    padding: 0;
+    height: 70px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    background-color: rgba(203, 110, 110, 1);
+  }
+
+  .player-control-left {
+    flex-grow: 1;
+    width: 60%;
+  }
+
+  .song-info .media-content {
+    max-width: 100%;
+  }
+
+  .media-left .thumbnail-wrapper .thumbnail {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
+
+  .btn-control {
+    margin: 0;
+    transform: scale(0.8);
   }
 }
